[gd_scene load_steps=21 format=2]

[ext_resource path="res://Assets/Enemies/Bat.png" type="Texture" id=1]
[ext_resource path="res://Assets/Shadows/SmallShadow.png" type="Texture" id=2]
[ext_resource path="res://Characters/HurtBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Bat.gd" type="Script" id=4]
[ext_resource path="res://Components/Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Components/DetectionRange.tscn" type="PackedScene" id=6]
[ext_resource path="res://Characters/HitBox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Components/SoftCollision.tscn" type="PackedScene" id=8]
[ext_resource path="res://Components/WanderController.tscn" type="PackedScene" id=10]


[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=7]
radius = 4.0

[sub_resource type="CapsuleShape2D" id=8]
radius = 6.0
height = 2.0

[sub_resource type="CircleShape2D" id=9]
radius = 48.0

[sub_resource type="CircleShape2D" id=10]
radius = 4.0

[sub_resource type="CircleShape2D" id=11]
radius = 6.0

[node name="Bat" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 4 )

[node name="Body" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
playing = true
offset = Vector2( 0, -12 )

[node name="Shadow" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 7 )

[node name="HurtBox" parent="." instance=ExtResource( 3 )]
collision_layer = 8
offset = Vector2( 0, -8 )

[node name="CollisionShape2D" parent="HurtBox" index="0"]
visible = false
position = Vector2( 0, -15 )
shape = SubResource( 8 )

[node name="Stats" parent="." instance=ExtResource( 5 )]
max_health = 5

[node name="DetectionRange" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="DetectionRange" index="0"]
visible = false
shape = SubResource( 9 )

[node name="HitBox" parent="." instance=ExtResource( 7 )]
collision_mask = 4

[node name="CollisionShape2D" parent="HitBox" index="0"]
visible = false
position = Vector2( 0, -15 )
shape = SubResource( 10 )

[node name="SoftCollision" parent="." instance=ExtResource( 8 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 11 )

[node name="WanderController" parent="." instance=ExtResource( 10 )]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="death" from="Stats" to="." method="_on_Stats_death"]

[editable path="HurtBox"]

[editable path="DetectionRange"]

[editable path="HitBox"]

[editable path="SoftCollision"]
